build: connect database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url = jdbc:mysql://codee-database-server.cghma3k79fds.ap-southeast-1.rds.amazonaws.com:3306/codeedb
+spring.datasource.username=admin
+spring.datasource.password=Wisdomworks.33
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
