--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+			<version>3.1.5</version>
 		</dependency>
 	</dependencies>
 
