--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           --health-timeout=5s
           --health-retries=5
       nosql-db:
-        image: wisdomwork/no-sql:latest
+        image: wisdomwork/mongo:latest
         env:
           MONGO_INITDB_ROOT_USERNAME: admin
           MONGO_INITDB_ROOT_PASSWORD: Wisdomworks.33
@@ -59,6 +59,7 @@ jobs:
 
   build-and-push:
     runs-on: ubuntu-latest
+    needs: run-tests
     steps:
       - uses: actions/checkout@v4
 
