--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
-name: Build and Push Docker images
+name: Build and Test
 
 on:
   pull_request:
     branches: ["main", "dev"]
   push:
-    branches: ["main", "WW-113"]
+    branches: ["WW-113"]
   workflow_dispatch:
 
 jobs:
@@ -52,26 +52,3 @@ jobs:
           SPRING_DATA_MONGODB_URI: mongodb://admin:Wisdomworks.33@localhost/?retryWrites=true&w=majority
           SPRING_DATA_MONGODB_DATABASE: codee
         run: mvn -B package --file pom.xml
-
-  build-and-push:
-    runs-on: ubuntu-latest
-    needs: run-tests
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./.docker/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/codee-be:latest
