--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>6.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
