--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ server.port=8080
 
 spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE}
+google.projectId=${GOOGLE_PROJECT_ID}
+storage.bucketName=${STORAGE_BUCKET_NAME}
