--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,12 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.1.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>6.1.3</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
