--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,12 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+
+			<dependency>
+				<groupId>com.google.code.gson</groupId>
+				<artifactId>gson</artifactId>
+				<version>2.10.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
