--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
+server.host=0.0.0.0
 
 spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE}
