fix: gh token and url

--- a/pom.xml
+++ b/pom.xml
@@ -239,5 +239,11 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	<distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/WisdomWorks/ecode-be</url>
+    </repository>
+  </distributionManagement>
 </project>
