omg, change to lowercase

--- a/.docker/dev.env
+++ b/.docker/dev.env
@@ -11,3 +11,5 @@ SPRING_DATA_MONGODB_URI=mongodb://admin:Wisdomworks.33@localhost/?retryWrites=tr
 SPRING_DATA_MONGODB_DATABASE=codee
 SPRING_DATASOURCE_USERNAME=admin
 SPRING_DATASOURCE_PASSWORD=Wisdomworks.33
+GOOGLE_PROJECT_ID=wisdomworks
+STORAGE_BUCKET_NAME=codee-data
