--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,26 +1,44 @@
-name: Push to Docker Hub
+name: Build and Push to Docker Hub
 
 on:
+  workflow_dispatch:
+
   push:
     branches:
-      - dev
+      - main
 
 jobs:
-  push:
+  build-and-push:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
-      - name: Login to DockerHub
+      - name: Build with Maven
+        run: ./mvnw clean package -DskipTests
+
+      - name: Build Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./.docker/Dockerfile
+          push: false
+          tags: ${{ secrets.DOCKER_USERNAME }}/codee-be:latest
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Push Docker image
         uses: docker/build-push-action@v3
         with:
           context: .
