--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ server.port=8080
 spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE}
 google.projectId=${GOOGLE_PROJECT_ID}
+google.location=${GOOGLE_LOCATION}
 storage.bucketName=${STORAGE_BUCKET_NAME}
