--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,11 @@
 			<artifactId>google-cloud-vertexai</artifactId>
 			<version>0.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+			<version>2.0.3</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
