add url variable to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE}
 google.projectId=${GOOGLE_PROJECT_ID}
 google.location=${GOOGLE_LOCATION}
 storage.bucketName=${STORAGE_BUCKET_NAME}
+url.admin.ui=${ADMIN_URL}
+url.user.ui=${USER_URL}
