--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,11 @@
 			<artifactId>spring-retry</artifactId>
 			<version>2.0.3</version>
 		</dependency>
+		<dependency>
+			<groupId>io.awspring.cloud</groupId>
+			<artifactId>spring-cloud-starter-aws-ses</artifactId>
+			<version>2.4.4</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
